--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -97,19 +97,19 @@ jobs:
           title: Code Coverage ${{ inputs.gradle-module }}
           update-comment: true
       - name: Cache SonarCloud packages
+        if: ${{ secrets.SONAR_TOKEN == '' }}
         uses: actions/cache@v3
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
       - name: Run Sonarqube
+        if: ${{ secrets.SONAR_TOKEN == '' }}
         env:
           GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
           GHL_PASSWORD: ${{ secrets.GHL_PASSWORD }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          if [ -z "$SONAR_TOKEN" ]; then
-            ./gradlew --no-daemon sonar
-          fi
+          ./gradlew --no-daemon sonar
         shell: bash
