--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -97,7 +97,7 @@ jobs:
           title: Code Coverage ${{ inputs.gradle-module }}
           update-comment: true
       - name: Cache SonarCloud packages
-        if: ${{ env.SONAR_TOKEN == '' }}
+        if: ${{ env.SONAR_TOKEN != '' }}
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         uses: actions/cache@v3
@@ -106,7 +106,7 @@ jobs:
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
       - name: Run Sonarqube
-        if: ${{ env.SONAR_TOKEN == '' }}
+        if: ${{ env.SONAR_TOKEN != '' }}
         env:
           GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
           GHL_PASSWORD: ${{ secrets.GHL_PASSWORD }}
