--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -238,8 +238,11 @@ jobs:
   test:
     name: Test
     needs: init
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.runner-type }}
     timeout-minutes: 30
+    strategy:
+      matrix:
+        runner-type: ${{ fromJSON(needs.init.outputs.runners) }}
     steps:
       - name: Download curl
         id: download-curl
