fix: deploy.yml now uses actions/checkout@v4

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -684,7 +684,7 @@ jobs:
     timeout-minutes: 5
     steps:
       - name: Check out manifest repository
-        uses: actions/checkout@master
+        uses: actions/checkout@v4
         with:
           repository: monta-app/kube-manifests
           path: 'manifests'
