fix: allow overwriting artifacts so actions can be re-run
See migration guide: https://github.com/actions/download-artifact/blob/main/docs/MIGRATION.md#overwriting-an-artifact

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -83,6 +83,7 @@ jobs:
             **/reports/tests/test
             /home/runner/.gradle/daemon/**/daemon-*.out.log
           retention-days: 2
+          overwrite: true
       - name: add coverage to PR
         id: jacoco
         uses: madrapps/jacoco-report@v1.6.1
