feat: streamline caching

--- a/docker-gradle-setup/action.yml
+++ b/docker-gradle-setup/action.yml
@@ -49,6 +49,7 @@ runs:
       with:
         distribution: ${{ inputs.java-distribution }}
         java-version: ${{ inputs.java-version }}
+        cache: 'gradle'
 
     - name: Install docker compose
       uses: KengoTODA/actions-setup-docker-compose@v1
@@ -69,14 +70,3 @@ runs:
 
     - name: 'Validate Gradle wrapper'
       uses: gradle/wrapper-validation-action@88425854a36845f9c881450d9660b5fd46bee142
-
-    - name: 'Restore Cache - Gradle packages'
-      uses: actions/cache/restore@v4
-      with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ github.repository }}-${{ hashFiles('buildSrc/**/Dependencies.kt', '**/*.gradle*', '**/gradle.properties', '**/gradle-wrapper.properties', '**/settings.gradle*') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-${{ github.repository }}
-          ${{ runner.os }}-gradle-
