--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -96,3 +96,11 @@ jobs:
           min-coverage-changed-files: 70
           title: Code Coverage ${{ inputs.gradle-module }}
           update-comment: true
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
+        with:
+          files: |
+            **/build/test-results/**/*.xml
+            **/build/test-results/**/*.trx
+            **/build/test-results/**/*.json
