--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -2,6 +2,11 @@ name: Build and test
 on:
   workflow_call:
     inputs:
+      action-runner:
+        required: false
+        type: string
+        description: "Runner to use for the job"
+        default: 'ubuntu-latest'
       java-distribution:
         required: false
         type: string
@@ -13,7 +18,12 @@ on:
       gradle-module:
         required: false
         type: string
-        description: "Name of the gradle module being tested"
+        description: "Name of the gradle module being tested - only needed if you want to test one module in a multi-module project"
+      coverage-tool:
+        required: false
+        type: string
+        default: 'jacoco'
+        description: "Coverage tool [jacoco|kover]"
     secrets:
       GHL_USERNAME:
         required: true
@@ -21,12 +31,12 @@ on:
       GHL_PASSWORD:
         required: true
         description: "Github Password (Gradle plugin)"
-      SLACK_APP_TOKEN:
+      SONAR_TOKEN:
         required: false
-        description: "Slack app token (Optional, won't publish to slack if not present)"
+        description: "SonarCloud token"
 jobs:
   pr_title_checker:
-    name: PR title checker
+    name: Check PR title
     if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
     timeout-minutes: 5
@@ -36,20 +46,36 @@ jobs:
           regexp: '^(\[(develop|development|staging)\]\s)?(build|chore|ci|docs|feat|feature|fix|perf|refactor|revert|style|test|release|ignore)(\([\w\- ]+\))?!?: (.+)'
           helpMessage: "Example: 'feat(app-api): Add new vehicle integration (SERVER-123)'"
   test:
-    name: Test
-    runs-on: ubuntu-latest
+    name: Test with code coverage
+    runs-on: ${{ inputs.action-runner }}
     timeout-minutes: 30
+    env:
+      # set the gradle tasks based on the coverage tool
+      GRADLE_TASKS: ${{ coverage == 'kover' && 'koverXmlReport koverHtmlReport' || 'test' }}
     steps:
+      # Checkout
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          # to check out the actual pull request commit, not the merge commit
           ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 0
+      # Set up JDK
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
           distribution: ${{ inputs.java-distribution }}
           java-version: ${{ inputs.java-version }}
           cache: 'gradle'
+      # Cache SonarCloud packages
+      - name: Cache SonarCloud packages
+        if: ${{ SONAR_TOKEN }}
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      # Run linter
       - name: Run linter
         env:
           GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
@@ -63,7 +89,8 @@ jobs:
             ./gradlew --no-daemon $GRADLE_MODULE:ktlintCheck
           fi
         shell: bash
-      - name: Test project
+      # Run tests with coverage
+      - name: Run tests with coverage ${{ coverage }}
         env:
           GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
           GHL_PASSWORD: ${{ secrets.GHL_PASSWORD }}
@@ -71,31 +98,55 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           if [ -z "$GRADLE_MODULE" ]; then
-            ./gradlew --no-daemon test
+            ./gradlew --no-daemon ${{ GRADLE_TASKS }} --parallel
           else
-            ./gradlew --no-daemon $GRADLE_MODULE:test
+            ./gradlew --no-daemon $GRADLE_MODULE:${{ GRADLE_TASKS }} --parallel
           fi
         shell: bash
+      # Upload test results
       - name: Upload test results
         if: ${{ always() }}
         uses: actions/upload-artifact@v4
         with:
           name: test-result
           path: |
+            ${{ github.workspace }}/build/reports/kover
             **/reports/tests/test
             /home/runner/.gradle/daemon/**/daemon-*.out.log
           retention-days: 2
           overwrite: true
-      - name: add coverage to PR
+      # Upload results to SonarCloud
+      - name: Upload results to SonarCloud
+        if: ${{ SONAR_TOKEN }}
+        env:
+          GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
+          GHL_PASSWORD: ${{ secrets.GHL_PASSWORD }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: ./gradlew sonar
+      # Add code coverage to PR
+      - name: add code coverage to PR (jacoco)
+        if: ${{ coverage == 'jacoco' }}
         id: jacoco
         uses: madrapps/jacoco-report@v1.6.1
         with:
+          title: Code Coverage ${{ inputs.gradle-module }}
           paths: ${{ github.workspace }}/**/jacocoTestReport.xml
           token: ${{ secrets.GITHUB_TOKEN }}
           min-coverage-overall: 70
           min-coverage-changed-files: 70
-          title: Code Coverage ${{ inputs.gradle-module }}
           update-comment: true
+      # Add code coverage to PR
+      - name: Add code coverage to PR (kover)
+        if: ${{ coverage == 'kover' }}
+        uses: mi-kas/kover-report@v1
+        with:
+          title: Code Coverage ${{ inputs.gradle-module }}
+          path: ${{ github.workspace }}/build/reports/kover/report.xml
+          token: ${{ secrets.GITHUB_TOKEN }}
+          min-coverage-overall: 70
+          min-coverage-changed-files: 70
+          update-comment: true
+          coverage-counter-type: LINE
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
