--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -51,7 +51,7 @@ jobs:
     timeout-minutes: 30
     env:
       # set the gradle tasks based on the coverage tool
-      GRADLE_TASKS: ${{ coverage == 'kover' && 'koverXmlReport koverHtmlReport' || 'test' }}
+      GRADLE_TASKS: ${{ coverage-tool == 'kover' && 'koverXmlReport koverHtmlReport' || 'test' }}
     steps:
       # Checkout
       - name: Checkout
@@ -90,7 +90,7 @@ jobs:
           fi
         shell: bash
       # Run tests with coverage
-      - name: Run tests with coverage ${{ coverage }}
+      - name: Run tests with coverage ${{ coverage-tool }}
         env:
           GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
           GHL_PASSWORD: ${{ secrets.GHL_PASSWORD }}
@@ -125,7 +125,7 @@ jobs:
         run: ./gradlew sonar
       # Add code coverage to PR
       - name: add code coverage to PR (jacoco)
-        if: ${{ coverage == 'jacoco' }}
+        if: ${{ coverage-tool == 'jacoco' }}
         id: jacoco
         uses: madrapps/jacoco-report@v1.6.1
         with:
@@ -137,7 +137,7 @@ jobs:
           update-comment: true
       # Add code coverage to PR
       - name: Add code coverage to PR (kover)
-        if: ${{ coverage == 'kover' }}
+        if: ${{ coverage-tool == 'kover' }}
         uses: mi-kas/kover-report@v1
         with:
           title: Code Coverage ${{ inputs.gradle-module }}
