--- a/.github/workflows/backstage_techdocs.yaml
+++ b/.github/workflows/backstage_techdocs.yaml
@@ -35,7 +35,7 @@ jobs:
         run: sudo npm install -g @techdocs/cli
 
       - name: Install mkdocs and mkdocs plugins
-        run: python -m pip install mkdocs-techdocs-core==1.*
+        run: python -m pip install mkdocs-techdocs-core==1.* mkdocs-literate-nav mkdocs-mermaid2-plugin
 
       - name: Generate docs site
         run: techdocs-cli generate --no-docker --verbose
