--- a/.github/workflows/backstage_techdocs.yaml
+++ b/.github/workflows/backstage_techdocs.yaml
@@ -27,7 +27,7 @@ jobs:
       AWS_REGION: 'eu-west-1'
       ENTITY_NAMESPACE: 'default'
       ENTITY_KIND: 'Component'
-      ENTITY_NAME: ${{ github.event.repository.name }}
+      ENTITY_NAME: ${{ inputs.repository-name }}
 
     steps:
       - name: Checkout code
