--- a/.github/workflows/backstage_techdocs.yaml
+++ b/.github/workflows/backstage_techdocs.yaml
@@ -1,12 +1,14 @@
 name: Publish TechDocs Site
 
 on:
-  push:
-    branches: [main]
-    paths:
-      - "docs/**"
-      - "mkdocs.yml"
-  workflow_dispatch:
+  workflow_call:
+    secrets:
+      TECHDOCS_AWS_ACCESS_KEY_ID:
+        required: true
+        description: 'TECHDOCS AWS access key id'
+      TECHDOCS_AWS_SECRET_ACCESS_KEY:
+        required: true
+        description: 'TECHDOCS AWS secret access key'
 
 
 jobs:
@@ -35,7 +37,7 @@ jobs:
         run: sudo npm install -g @techdocs/cli
 
       - name: Install mkdocs and mkdocs plugins
-        run: python -m pip install mkdocs-techdocs-core==1.*
+        run: python -m pip install mkdocs-techdocs-core==1.* mkdocs-literate-nav mkdocs-mermaid2-plugin
 
       - name: Generate docs site
         run: techdocs-cli generate --no-docker --verbose
