fix: question mark

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -394,7 +394,7 @@ jobs:
           if [ -e ./catalog-info.yaml ]; then
             # Extract the 'owner' and 'system' values, removing anything after a '#'
             OWNER=$(grep '^\s*owner:' ./catalog-info.yaml | sed 's/.*owner: ?\([^#]*\).*/\1/' | xargs)
-            SYSTEM=$(grep '^\s*system:' ./catalog-info.yaml | sed 's/.*system: \([^#]*\).*/\1/' | xargs)
+            SYSTEM=$(grep '^\s*system:' ./catalog-info.yaml | sed 's/.*system: ?\([^#]*\).*/\1/' | xargs)
           fi
 
           # Print the yml file
