feat: Run tests parameter (#116)

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -78,6 +78,10 @@ on:
         required: false
         type: number
         default: 10
+      run-tests:
+        required: false
+        type: boolean
+        default: true
     secrets:
       GHL_USERNAME:
         required: true
@@ -251,6 +255,7 @@ jobs:
     needs: init
     runs-on: ${{ matrix.runner-type }}
     timeout-minutes: 30
+    if: ${{ inputs.run-tests }}
     strategy:
       matrix:
         runner-type: ${{ fromJSON(needs.init.outputs.runners) }}
@@ -305,7 +310,7 @@ jobs:
           slack-message-id: ${{ needs.init.outputs.slack-message-id }}
 
   update-open-api-spec:
-    if: ${{ inputs.upload-open-api }}
+    if: ${{ ! failure() && inputs.upload-open-api }}
     name: Update OpenAPI Spec
     needs: [ init, test, build ]
     runs-on: ubuntu-latest
@@ -641,7 +646,7 @@ jobs:
   push-manifest-list:
     name: Push Manifest
     needs: [ init, build, test ]
-    if: success()
+    if: ${{ ! failure() }}
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
@@ -725,7 +730,7 @@ jobs:
           slack-message-id: ${{ needs.init.outputs.slack-message-id }}
 
   deploy_by_push:
-    if: ${{ inputs.push-to-manifests }}
+    if: ${{ ! failure() && inputs.push-to-manifests }}
     name: Deploy (push)
     needs:
     - push-manifest-list
@@ -780,7 +785,7 @@ jobs:
           slack-message-id: ${{ needs.init.outputs.slack-message-id }}
 
   deploy_by_argocd:
-    if: ${{ ! inputs.push-to-manifests }}
+    if: ${{ ! failure() && ! inputs.push-to-manifests }}
     name: Deploy (ArgoCD)
     needs:
     - push-manifest-list
@@ -829,7 +834,7 @@ jobs:
           slack-message-id: ${{ needs.init.outputs.slack-message-id }}
 
   deploy_ocpp_gateway:
-    if: ${{ inputs.service-identifier == 'ocpp-gateway' || inputs.service-identifier == 'ocpp-v201-gateway' }}
+    if: ${{ ! failure() && ( inputs.service-identifier == 'ocpp-gateway' || inputs.service-identifier == 'ocpp-v201-gateway' ) }}
     name: Deploy OCPP Gateway
     needs:
     - init
