feat(o11y): add default DELETE route to service profile

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -471,6 +471,9 @@ jobs:
               - condition:
                   method: OPTIONS
                 name: OPTIONS [Default]
+              - condition:
+                  method: DELETE
+                name: DELETE [Default]
           EOT
           yq service-profile-new.yaml
           EOB
